Advance Kubernetes/SwiftOrder-Istio/k8s-istio/00-namespace.yaml
# 00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swift-order
  labels:
    istio-injection: "enabled"
