Advance Kubernetes/SwiftOrder-Istio/k8s-istio/06-mtls-peer-auth.yaml
# 06-mtls-peer-auth.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "swift-order"
spec:
  mtls:
    mode: STRICT
