Advance Kubernetes/SwiftOrder-Istio/k8s-istio/02-gateway.yaml
# 02-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: swift-order-gateway
  namespace: swift-order
spec:
  selector:
    istio: ingressgateway # Use Istio's default ingress controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
