Advance Kubernetes/SwiftOrder-Istio/k8s-istio/03-destinationrules.yaml
# 03-destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-service
  namespace: swift-order
spec:
  host: user-service.swift-order.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
# Also define for other services to enable policies like mTLS

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order-api
  namespace: swift-order
spec:
  host: order-api.swift-order.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: inventory-service
  namespace: swift-order
spec:
  host: inventory-service.swift-order.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
